--- a/about.html
+++ b/about.html
@@ -133,13 +133,13 @@ I am currently trying to develop a new website that offers high-quality services
 				<i>Get in touch via our emails, WhatsApp number, website..., for more information about my services.<br></i>
 	
 	
-				☎️🪀 : +32 465646422<br>
-📧 : robielmehari14@gmail.com <br>
-📧 : robielmehari15@outlook.com
+				☎️🪀 : +32 465646...<br>
+📧 : robielmehar...@gmail.com <br>
+📧 : robielmehar...@outlook.com
 <br>
 			<i>
-		* http://localhost:8158/Robi.short stories</i><br>
-	<i>	*https://www.youtube.com/@tomasbinyam7540</i>
+		* http://localhost:..../Robi.short stories</i><br>
+	<i>	*https://www.youtube.com/@toma.binyam...</i>
 		<div class="background-image">	<br></div>
     <div class="Robi"> <em> Create by Robel Mehari </em> </div>
 		</div>
