--- a/Home2.html
+++ b/Home2.html
@@ -118,9 +118,9 @@ searchBtn.addEventListener('click', (e) => {
         <h1> ብሉጻት ሓጸርቲ ዛንታታት </h1>
         <nav>
             <ul>
-                <li><a href="Home3.html">📕ፍቕራዊ ዛንታ</a></li>
-                <li><a href="Home3.html">📘ልቢ ወለድ</a></li>
-                <li><a href="Home3.html">📗ምሽጥር</a></li>
+                <li><a href="#story1">📕ፍቕራዊ ዛንታ</a></li>
+                <li><a href="#story2">📘ልቢ ወለድ</a></li>
+                <li><a href="#story3">📗ምሽጥር</a></li>
             </ul>
         </nav>
     </header>
