--- a/index.html
+++ b/index.html
@@ -134,10 +134,20 @@ footer {
     color:#e26b05;
     cursor: pointer;
 }
+#search-btn10 {
+    width: 15%;
+    padding: 10px;
+    border: none;
+    border-radius: 10px;
+    background-color: #3e62efcc;
+    color:#e26b05;
+    cursor: pointer;
+}
     </style>
    
 </head>
 <body>
+    <a href="Home3.html"><button id="search-btn10">🗃📚</button></a> 
    <input type="range">
    <header>
       
@@ -166,6 +176,7 @@ footer {
                 <li🐝><a href="Chap5.html">        <p><i> <button> ☆ Chapter 4🐝 </button> <br></i></p></a></li>
                 <li🐝><a href="Chap6.html">        <p><i> <button> ☆ Chapter 5🐝 </button> <br></i></p></a></li>
                 <li🐝><a href="Home2.html">        <p><i> <button id="search-btn1"> 📚ተወሳኺ ኣንብብ 💡</button> <br></i></p></a></li>
+                <li🐝><a href="Home3.html">        <p><i> <button id="search-btn1"> 📚ሞራል ድርኺት ✨️💡</button> <br></i></p></a></li>
             </ul>
         </nav> 
             </div>
