--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@ footer {
    
 </head>
 <body>
-    <a href="Home3.html"><button id="search-btn10">🗃📚</button></a> 
+    <a href="Home3.html"><button id="search-btn10">🗃</button></a> 
    <input type="range">
    <header>
       
