--- a/Home3.html
+++ b/Home3.html
@@ -48,24 +48,37 @@ h2 {
     align-items: center;
     
 }
+		header {
+    height: 50px;
+    color: #fff;
+    padding: 20px;
+    text-align: center;
+   background-image: url("Bees5.gif");
+  background-size: cover;
+  background-position: center center;
+		}
 	</style>
 </head>
 <body>
+   <header>
    <nav>
            <a href="Home2.html"><button> Home</button></a>
            <a href="about.html"><button> Contact us </button></a>
            <a href="Home.html"><button> Central stories</button></a>
-           <a href="acc.html"><button>Members’ acc.</button></a>
-    </nav>
+           <a href="acc.html"><button>👥                    </button></a>
+   </nav>
+   </header>
 	<div class="story">
 	  <input type="date">
 		<h2> Today's moral story </h2>
 		
-		<p> <i>ሎሚ ድርኺት ወይ ሞራላዊ ትምህርቲ</i> 🕯ልክዕ ከምቲ ዝዘራእካዪ ኢኻ ትዓጽድ ዝብሃል እዩ ኮይኑ።ወይ ድማ <mark>📃ጽቡቕ እንተጌርካ፡ሓሊፉ እዩ ዝጸንሓካ።</mark><b>📄ስለዚ ንመን ብዘየገድስ ጽቡቕ ንግበር እሞ፡ዓስቢ ናይ ሰናይ ተግባርና ሓደ መዓልቲ ክንፍደ ኢና።</b><i>📑ብዓቢኡ ኽኣ ኣምላኽ ይሕጎስ። </i>
-</p>
-		<p> 📜*ሓደ መዓልቲ፡ሓንቲ ዕብይ ዝበለት ሰበይቲ፡ኣብ ማእከል ጎደና መኪና ስለዝተበላሸወታ፡ዝሕግዛ ሰብ ንምርካብ ሃሰው ትብል ነበረት።እንተኾነ ግን ኩሉ ገጉዳዩ ስለ ዝዓጠጦ ፡ረረጊጽዋ ብምሕላፍ፡ሓጋዚ ከይረኸበት ኣብቲ ዛሕልን ኣስሓይታን ዝዓብለሎ ኩነታት ኣየር ንበይና ተዓኒዳ ሰዓታት ሓለፈ፡፡ ተስፋ ቆሪጻ ኣብ ማእከል ጽርግያ ብፍርሒ ተዋሒጣ እንከላ እዩ ድማ፡ሓደ ጥዑይ ሰብ፡ኩነታታ ርእዩ ክረድኣ መኪንኡ ደው ኣቢሉ ናብኣ ዘበለ።ንሳ ግን ዋላ እኳ ፍሽኽ ኢሉ እንተቐረባ፡እንታይ እዩ ጥዑይ ዘይመስል፡እዝስ ክጎድኣኒ እዩ መጺኡ ኢላ ብፍርሒ ተሸቑረረት። ንሱ ድማ ከም ዝፈርሐት ስለ ዘስተባህለላ፡" ኣጆኺ ማማ ኣይትፍርሒ ከሕግዘኪ እየ መጺአ፡ኣነ ክሳብ ዘዕርየልኪ ንምንታይ ኣብ ዉሽጢ መኪና ኣቲኺ ዘይትሞቒ"፡ኢሉ ማዕጾ መኪና ከፈተላ።ኣስዒቡ ድማ፡"ብርያን ኣንደርሰን ድማ ይበሃል" በላ።<br>
+		<p> <i>ሎሚ ድርኺት ወይ ሞራላዊ ትምህርቲ</i> 🕯ልክዕ ከምቲ ዝዘራእካዪ ኢኻ ትዓጽድ ዝብሃል እዩ ኮይኑ።ወይ ድማ <mark>📃ጽቡቕ እንተጌርካ፡ሓሊፉ እዩ ዝጸንሓካ።</mark><b>📄ስለዚ ንመን ብዘየገድስ ጽቡቕ ንግበር እሞ፡ዓስቢ ናይ ሰናይ ተግባርና ሓደ መዓልቲ ክንፍደ ኢና።</b><i>📑ብዓቢኡ ኽኣ ኣምላኽ ይሕጎስ። </i></p>
+	</div>
+	<div class="story">
 
-    📜* ድሕሪ'ዚ ብርያን ነታ መኪና ብምፍታሽ ብዘይካ ምንፋስ ጎማ ካልእ ብልሽት ኣይረኸበላን፡፡ብታሕቲ ኣትዩ ድማ ጎማ መኪና ቀየረላ።እታ ሰበይቲ ካብታ መኪና ብምውራድ "ካብ St.Louis ኢየ መጺአ፡ብምንታይ ከምዘመስግነካ ኣይፈልጥን እየ።ብጣዕሚ እየ ተጨኒቐ ጸኒሐ።ናይ ብሓቂ ኢኻ ኣገላጊልካኒ። ዝሓተትካኒ ክኸፍል ድማ ድልውቲ እየ" በለቶ ሩፍታ እናተሰምዓ።ንሱ ግን መካኒክ ስርሑ ከምዘይኮነ ይፈልጥ እዩ።ድሌቱ ከሕግዛ ጥራይ እዩ ኔሩ።ምኽንያቱ ቅድሚ ሕጂ፡ ንዕኡ'ዉን ብዙሕ ሕማቕ ነገራት ኣጋጢምዎ ከም ዝነበረን፡ኣምላኽ ካብ ሕማቕ ነገራት ብተመሳሳሊ መንገዲ ከም ዝረድኦን ብምዝካር፡ገንዘብ ክቕበላ ህርድግ ኣይበለን።ፍሽኽ እናበለ ድማ፡" ናይ ብሓቂ ዓስበይ ክትከፍልኒ እንተደሊኺ፡ከምዚ ኣነ ዝሓገዝኹኺ፡ንስኺ ዉን ዝተጸገመ ሰብ እንተሪኢኺ ዘድልዮ ሓገዝ ከተበርክትሉ ከም ዘለኪ ጥራይ እየ ዝምሕጸነኪ" በላ።ኣስዒቡ ድማ"ንዓይ 'ዉን ዘክርኒ" በላ።
+<p> 📜*ሓደ መዓልቲ፡ሓንቲ ዕብይ ዝበለት ሰበይቲ፡ኣብ ማእከል ጎደና መኪና ስለዝተበላሸወታ፡ዝሕግዛ ሰብ ንምርካብ ሃሰው ትብል ነበረት።እንተኾነ ግን ኩሉ ገጉዳዩ ስለ ዝዓጠጦ ፡ረረጊጽዋ ብምሕላፍ፡ሓጋዚ ከይረኸበት ኣብቲ ዛሕልን ኣስሓይታን ዝዓብለሎ ኩነታት ኣየር ንበይና ተዓኒዳ ሰዓታት ሓለፈ፡፡ ተስፋ ቆሪጻ ኣብ ማእከል ጽርግያ ብፍርሒ ተዋሒጣ እንከላ እዩ ድማ፡ሓደ ጥዑይ ሰብ፡ኩነታታ ርእዩ ክረድኣ መኪንኡ ደው ኣቢሉ ናብኣ ዘበለ።ንሳ ግን ዋላ እኳ ፍሽኽ ኢሉ እንተቐረባ፡እንታይ እዩ ጥዑይ ዘይመስል፡እዝስ ክጎድኣኒ እዩ መጺኡ ኢላ ብፍርሒ ተሸቑረረት። ንሱ ድማ ከም ዝፈርሐት ስለ ዘስተባህለላ፡" ኣጆኺ ማማ ኣይትፍርሒ ከሕግዘኪ እየ መጺአ፡ኣነ ክሳብ ዘዕርየልኪ ንምንታይ ኣብ ዉሽጢ መኪና ኣቲኺ ዘይትሞቒ"፡ኢሉ ማዕጾ መኪና ከፈተላ።ኣስዒቡ ድማ፡"ብርያን ኣንደርሰን ድማ ይበሃል" በላ።<br>
+
+  📜* ድሕሪ'ዚ ብርያን ነታ መኪና ብምፍታሽ ብዘይካ ምንፋስ ጎማ ካልእ ብልሽት ኣይረኸበላን፡፡ብታሕቲ ኣትዩ ድማ ጎማ መኪና ቀየረላ።እታ ሰበይቲ ካብታ መኪና ብምውራድ "ካብ St.Louis ኢየ መጺአ፡ብምንታይ ከምዘመስግነካ ኣይፈልጥን እየ።ብጣዕሚ እየ ተጨኒቐ ጸኒሐ።ናይ ብሓቂ ኢኻ ኣገላጊልካኒ። ዝሓተትካኒ ክኸፍል ድማ ድልውቲ እየ" በለቶ ሩፍታ እናተሰምዓ።ንሱ ግን መካኒክ ስርሑ ከምዘይኮነ ይፈልጥ እዩ።ድሌቱ ከሕግዛ ጥራይ እዩ ኔሩ።ምኽንያቱ ቅድሚ ሕጂ፡ ንዕኡ'ዉን ብዙሕ ሕማቕ ነገራት ኣጋጢምዎ ከም ዝነበረን፡ኣምላኽ ካብ ሕማቕ ነገራት ብተመሳሳሊ መንገዲ ከም ዝረድኦን ብምዝካር፡ገንዘብ ክቕበላ ህርድግ ኣይበለን።ፍሽኽ እናበለ ድማ፡" ናይ ብሓቂ ዓስበይ ክትከፍልኒ እንተደሊኺ፡ከምዚ ኣነ ዝሓገዝኹኺ፡ንስኺ ዉን ዝተጸገመ ሰብ እንተሪኢኺ ዘድልዮ ሓገዝ ከተበርክትሉ ከም ዘለኪ ጥራይ እየ ዝምሕጸነኪ" በላ።ኣስዒቡ ድማ"ንዓይ 'ዉን ዘክርኒ" በላ።
 <br>
 📜* ድሕሪ'ዚ መኪንኣ ኣተሲኣ ክሳብ ትኸይድ ተጸብዩ፡ንሱ ዉን መኪንኡ ኣልዒሉ ንገዝኡ ኣምረሐ።በቲ ዝገበሮ ድማ ብዙሕ ዕግበት ተሰምዖ።
 <br>
