--- a/Home3.html
+++ b/Home3.html
@@ -53,7 +53,7 @@ h2 {
     color: #fff;
     padding: 20px;
     text-align: center;
-   background-image: url("Test.jpg");
+   background-image: url("Short3.jpg");
   background-size: cover;
   background-position: center center;
 		}
